[package]
name = "cpu-renderer"
version = "0.1.0"
authors = ["Arman Uguray <arman@armansito.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
argh = "0.1.7"
image = "0.24.1"
impl_ops = "0.1.1"
rand = "0.8.4"
rand_distr = "0.4.3"
rayon = "1.5.3"
